; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe.c_bxe_get_q_flags.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe.c_bxe_get_q_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bxe_softc = type { i32 }
%struct.bxe_fastpath = type { i32 }

@ECORE_Q_FLG_OV = common dso_local global i32 0, align 4
@IFCAP_LRO = common dso_local global i32 0, align 4
@ECORE_Q_FLG_TPA = common dso_local global i32 0, align 4
@ECORE_Q_FLG_LEADING_RSS = common dso_local global i32 0, align 4
@ECORE_Q_FLG_MCAST = common dso_local global i32 0, align 4
@ECORE_Q_FLG_VLAN = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@ECORE_Q_FLG_TPA_IPV6 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.bxe_softc*, %struct.bxe_fastpath*, i64)* @bxe_get_q_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @bxe_get_q_flags(%struct.bxe_softc* %0, %struct.bxe_fastpath* %1, i64 %2) #0 {
  %4 = alloca %struct.bxe_softc*, align 8
  %5 = alloca %struct.bxe_fastpath*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.bxe_softc* %0, %struct.bxe_softc** %4, align 8
  store %struct.bxe_fastpath* %1, %struct.bxe_fastpath** %5, align 8
  store i64 %2, i64* %6, align 8
  store i64 0, i64* %7, align 8
  %8 = load %struct.bxe_softc*, %struct.bxe_softc** %4, align 8
  %9 = call i64 @IS_MF_SD(%struct.bxe_softc* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %3
  %12 = load i32, i32* @ECORE_Q_FLG_OV, align 4
  %13 = call i32 @bxe_set_bit(i32 %12, i64* %7)
  br label %14

14:                                               ; preds = %11, %3
  %15 = load %struct.bxe_softc*, %struct.bxe_softc** %4, align 8
  %16 = getelementptr inbounds %struct.bxe_softc, %struct.bxe_softc* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @if_getcapenable(i32 %17)
  %19 = load i32, i32* @IFCAP_LRO, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %14
  %23 = load i32, i32* @ECORE_Q_FLG_TPA, align 4
  %24 = call i32 @bxe_set_bit(i32 %23, i64* %7)
  br label %25

25:                                               ; preds = %22, %14
  %26 = load i64, i64* %6, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %33

28:                                               ; preds = %25
  %29 = load i32, i32* @ECORE_Q_FLG_LEADING_RSS, align 4
  %30 = call i32 @bxe_set_bit(i32 %29, i64* %7)
  %31 = load i32, i32* @ECORE_Q_FLG_MCAST, align 4
  %32 = call i32 @bxe_set_bit(i32 %31, i64* %7)
  br label %33

33:                                               ; preds = %28, %25
  %34 = load i32, i32* @ECORE_Q_FLG_VLAN, align 4
  %35 = call i32 @bxe_set_bit(i32 %34, i64* %7)
  %36 = load i64, i64* %7, align 8
  %37 = load %struct.bxe_softc*, %struct.bxe_softc** %4, align 8
  %38 = load %struct.bxe_fastpath*, %struct.bxe_fastpath** %5, align 8
  %39 = load i32, i32* @TRUE, align 4
  %40 = call i64 @bxe_get_common_flags(%struct.bxe_softc* %37, %struct.bxe_fastpath* %38, i32 %39)
  %41 = or i64 %36, %40
  ret i64 %41
}

declare dso_local i64 @IS_MF_SD(%struct.bxe_softc*) #1

declare dso_local i32 @bxe_set_bit(i32, i64*) #1

declare dso_local i32 @if_getcapenable(i32) #1

declare dso_local i64 @bxe_get_common_flags(%struct.bxe_softc*, %struct.bxe_fastpath*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
